--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,6 +18,6 @@
     }
   ],
 
-  "permissions": ["storage", "tabs", "scripting"],
+  "permissions": ["storage", "tabs", "scripting", "notifications"],
   "host_permissions": ["<all_urls>"]
 }
