--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,12 @@
   "manifest_version": 3,
   "name": "DozeTab",
   "version": "1.0.0",
-  "description": "DozeTabs 💤 – A lightweight Chrome extension that lets you “doze” your tabs instead of keeping them open.",
+  "description": "DozeTabs – A lightweight Chrome extension that lets you doze your tabs instead of keeping them open.",
+  "icons": {
+    "16": "icon-16.png",
+    "48": "icon-48.png",
+    "128": "icon-128.png"
+  },
   "action": {
     "default_popup": "popup.html"
   },
